--- a/ServiceCatalog/Views/Deployment/ManageView.cshtml
+++ b/ServiceCatalog/Views/Deployment/ManageView.cshtml
@@ -45,7 +45,7 @@
                             <div class="col-md-3">
                                 @Html.ActionLink("Visualize", "Visualize", "Deployment",
                                                    new { templateId = template.TemplateId },
-                                                   new { @class = "btn btn-primary" })
+                                                   new { @class = "btn btn-primary", target = "_blank" })
                             </div>
                         </td>
                         <td>
