--- a/ServiceCatalog/Views/Shared/_Layout.cshtml
+++ b/ServiceCatalog/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                         {
                             <li>@Html.ActionLink("Add Template", "CreateTemplateView", "Template")</li>
                         }
+                        <li>@Html.ActionLink("Billing", "BillingView", "Billing")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -42,7 +43,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p class="footer-text">&copy; @DateTime.Now.Year</p>
+            @*<p class="footer-text">&copy; @DateTime.Now.Year</p>*@
         </footer>
     </div>
 
