--- a/ServiceCatalog/Views/Shared/_Layout.cshtml
+++ b/ServiceCatalog/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using ServiceCatalog.Common.Helpers
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -28,7 +29,7 @@
                         <li>@Html.ActionLink("Deploy", "DeployView", "Deployment")</li>
                         <li>@Html.ActionLink("Manage", "ManageView", "Deployment")</li>
                         <li>@Html.ActionLink("Deployments", "DeploymentsView", "Deployments")</li>
-                        if (HttpContext.Current.User.Identity.Name == "eduadmin2@wwedudemo7.onmicrosoft.com")
+                        if (UserRoleHelper.IsAdmin(HttpContext.Current.User.Identity.Name))
                         {
                             <li>@Html.ActionLink("Add Template", "CreateTemplateView", "Template")</li>
                         }
