--- a/ServiceCatalog/Views/Shared/_Layout.cshtml
+++ b/ServiceCatalog/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                         <li>@Html.ActionLink("Deploy", "DeployView", "Deployment")</li>
                         <li>@Html.ActionLink("Manage", "ManageView", "Deployment")</li>
                         <li>@Html.ActionLink("Deployments", "DeploymentsView", "Deployments")</li>
+                        <li>@Html.ActionLink("RunBooks", "RunBooksView", "RunBooks")</li>
                         if (UserRoleHelper.IsAdmin(HttpContext.Current.User.Identity.Name))
                         {
                             <li>@Html.ActionLink("Add Template", "CreateTemplateView", "Template")</li>
