--- a/ServiceCatalog/Views/Deployments/DeploymentsView.cshtml
+++ b/ServiceCatalog/Views/Deployments/DeploymentsView.cshtml
@@ -5,7 +5,10 @@
 }
 
 <div>
-    <h4>Deployments</h4>
+    <div style="display:  flex; justify-content: space-between;">
+        <h4>Deployments</h4>
+        <button class="btn btn-primary" style="height: 10%;" onclick="window.location.reload();">Refresh</button>
+    </div>
     <hr />
     @Html.ValidationSummary(true)
 
