--- a/ServiceCatalog/Views/Deployment/DeployView.cshtml
+++ b/ServiceCatalog/Views/Deployment/DeployView.cshtml
@@ -64,7 +64,7 @@
                                         new {@class = "btn btn-warning"})
                                     @Html.ActionLink("Delete",
                                         "DeleteTemplate",
-                                        new { controller = "Deployment", templateId = Model.TemplateId },
+                                        new { controller = "Deployment", templateId = template.TemplateId },
                                         new { @class = "btn btn-danger", onclick = "return confirm('Are you sure you wish to delete this article?');" })
                                 </div>
                             </td>
