Added runbook parameters

--- a/ServiceCatalog/Views/Parameters/ParametersView.cshtml
+++ b/ServiceCatalog/Views/Parameters/ParametersView.cshtml
@@ -16,55 +16,62 @@
         id = "deployment-parameters-form"
     }))
     {
-        <h4>BASICS</h4>
-        <hr />
-        @Html.ValidationSummary(true)
-
-        @Html.HiddenFor(m => m.TemplateId)
-        <div class="form-group col-md-6">
-            <label class="control-label">Subscription</label>
-            @Html.DropDownList(
-                     "SelectedSubscriptionId",
-                     Model.Subscriptions.Select(s =>
-                         new SelectListItem
-                         {
-                             Text = s.DisplayName,
-                             Value = s.SubscriptionId,
-                         }),
-                     new { @class = "form-control", id = "subscription-select" })
-            @Html.ValidationMessage("SelectedSubscriptionId")
+        @Html.HiddenFor(m => m.IsManage)
+        var style = "";
+        if (Model.IsManage)
+        {
+            style = "display:none";
+        }
+        <div class="basic-section" style="@style">
+            <h4>BASICS</h4>
+            <hr />
+            @Html.ValidationSummary(true)
+            @Html.HiddenFor(m => m.TemplateId)
+            <div class="form-group col-md-6">
+                <label class="control-label">Subscription</label>
+                @Html.DropDownList(
+                          "SelectedSubscriptionId",
+                          Model.Subscriptions.Select(s =>
+                              new SelectListItem
+                              {
+                                  Text = s.DisplayName,
+                                  Value = s.SubscriptionId,
+                              }),
+                          new { @class = "form-control", id = "subscription-select" })
+                @Html.ValidationMessage("SelectedSubscriptionId")
+            </div>
+            <div class="form-group col-md-6">
+                <label class="control-label">Resource group</label>
+                @Html.DropDownList("SelectedResourceGroupName", new SelectListItem[] { }, new { id = "resource-group-select" })
+            </div>
         </div>
 
-        <div class="form-group col-md-6">
-            <label class="control-label">Resource group</label>
-            @Html.DropDownList("SelectedResourceGroupName", new SelectListItem[] { }, new { id = "resource-group-select" })
-        </div>
         <h4>SETTINGS</h4>
         <hr />
         for (var i = 0; i < Model.Parameters.Count; i++)
         {
-            <div class="form-group col-md-6">
-                <label class="control-label">@Model.Parameters[i].Name</label>
-                @if (Model.Parameters[i].Type == JsonTemplateParameterType.String)
-                {
-                    if (Model.Parameters[i].AllowedValues?.Count > 0)
-                    {
-                        @Html.DropDownList(Model.Parameters[i].Name,
-                                 new SelectList(Model.Parameters[i].AllowedValues),
-                                 new { @class = "form-control", id = Model.Parameters[i].Name })
-                    }
-                    else
-                    {
-                        @Html.TextBox(Model.Parameters[i].Name, "", new { @class = "form-control" })
-                    }
-                }
-                else if (Model.Parameters[i].Type == JsonTemplateParameterType.SecureString)
-                {
-                    @Html.Password(Model.Parameters[i].Name, "", new { @class = "form-control" })
-                    <div class="form-control-feedback"></div>
-                }
-                @Html.ValidationMessage(Model.Parameters[i].Name)
-            </div>
+        <div class="form-group col-md-6">
+            <label class="control-label">@Model.Parameters[i].Name</label>
+            @if (Model.Parameters[i].Type == JsonTemplateParameterType.String)
+        {
+            if (Model.Parameters[i].AllowedValues?.Count > 0)
+            {
+                @Html.DropDownList(Model.Parameters[i].Name,
+                               new SelectList(Model.Parameters[i].AllowedValues),
+                               new { @class = "form-control", id = Model.Parameters[i].Name })
+        }
+        else
+        {
+            @Html.TextBox(Model.Parameters[i].Name, "", new { @class = "form-control" })
+    }
+}
+else if (Model.Parameters[i].Type == JsonTemplateParameterType.SecureString)
+{
+    @Html.Password(Model.Parameters[i].Name, "", new { @class = "form-control" })
+    <div class="form-control-feedback"></div>
+}
+            @Html.ValidationMessage(Model.Parameters[i].Name)
+        </div>
         }
 
         <div class="form-group col-md-6">
@@ -72,8 +79,8 @@
                 <button id="deploy" type="submit" class="btn btn-primary">Start Deployment</button>
             </div>
         </div>
-    }
-</div>
+        }
+    </div>
 
 @section scripts
 {
@@ -93,7 +100,7 @@
                     create: true,
                     persist: false,
                     labelField: 'Name',
-                    valueField: 'Name',
+                    valueField: 'Name'
                 })[0].selectize;
 
                 fillResourceGroupList();
