--- a/ServiceCatalog/Views/Deployment/DeployView.cshtml
+++ b/ServiceCatalog/Views/Deployment/DeployView.cshtml
@@ -10,7 +10,7 @@
         <h4>Deploy View</h4>
         <hr />
         @Html.ValidationSummary(true)
-        @Html.ValidationSummary(true)
+        var count = 0;
         if (ViewBag.Templates != null && ViewBag.Templates.Count > 0)
         {
             <table class="table table-bordered table-responsive table-hover">
@@ -36,43 +36,49 @@
                         <td>
                             <div class="col-md-3">
                                 @Html.ActionLink("Download JSON template", "GetJsonTemplateFile", "Deployment",
-                                              new { templateId = template.TemplateId },
-                                              new { @class = "btn btn-primary" })
+                                         new { templateId = template.TemplateId },
+                                         new { @class = "btn btn-primary" })
                             </div>
                         </td>
                         <td>
                             <div class="col-md-3">
                                 @Html.ActionLink("Visualize", "Visualize", "Deployment",
-                                              new { templateId = template.TemplateId },
-                                              new { @class = "btn btn-primary", target = "_blank" })
+                                         new { templateId = template.TemplateId },
+                                         new { @class = "btn btn-primary", target = "_blank" })
                             </div>
                         </td>
 
                         <td>
                             <div class="col-md-3">
                                 @Html.ActionLink("Deploy", "ParametersView", "Parameters",
-                                    new { templateId = template.TemplateId, isManage = false},
-                                    new { @class = "btn btn-primary" })
+                                         new { templateId = template.TemplateId, isManage = false },
+                                         new { @class = "btn btn-primary" })
                             </div>
                         </td>
                         @if (ViewBag.IsAdmin)
                         {
                             <td>
-                                <div class="btn-group" role="group" >
+                                <div class="btn-group" role="group">
                                     @Html.ActionLink("Edit", "UpdateTemplateView", "Template",
-                                        new {templateId = template.TemplateId},
-                                        new {@class = "btn btn-warning"})
+                                             new { templateId = template.TemplateId },
+                                             new { @class = "btn btn-warning" })
                                     @Html.ActionLink("Delete",
-                                        "DeleteTemplate",
-                                        new { controller = "Deployment", templateId = template.TemplateId },
-                                        new { @class = "btn btn-danger", onclick = "return confirm('Are you sure you wish to delete this article?');" })
+                                             "DeleteTemplate",
+                                             new { controller = "Deployment", templateId = template.TemplateId },
+                                             new { @class = "btn btn-danger", onclick = "return confirm('Are you sure you wish to delete this article?');" })
                                 </div>
                             </td>
                         }
                         <td>
-                            @template.TemplateUsersGroup
+                            <a class="btn btn-primary show-button" data-toggle="modal" data-target="#outputsModal">
+                                Show Access List
+                                <p id="output-@count" style="display: none;">
+                                    @template.TemplateUsersGroup
+                                </p>
+                            </a>
                         </td>
                     </tr>
+                    count++;
                 }
             </table>
         }
@@ -81,4 +87,25 @@
             <p>No records to display</p>
         }
     }
+
+    @{
+        Html.RenderPartial("_Modal");
+    }
 </div>
+
+@section scripts
+{
+    <script>
+        if (!window.jQuery) {
+            console.error("jQuery is not defined");
+        } else {
+            (function ($) {
+                $('.show-button').click(function (event) {
+                    $('#myModal').modal('show');
+                    $('#myModalLabel').text('Access List');
+                    $('#outputsModalBody').val($.trim(event.target.children[0].innerText));
+                });
+            })(window.jQuery);
+        }
+    </script>
+}
