--- a/ServiceCatalog/Views/RunBooks/RunBooksView.cshtml
+++ b/ServiceCatalog/Views/RunBooks/RunBooksView.cshtml
@@ -42,7 +42,7 @@
                     <td>
                         @if (job.Properties.StartTime != null)
                         {
-                            @job.Properties.StartTime.ToString("MM/dd/yyyy hh:mm") 
+                            @job.Properties.StartTime.ToString("MM/dd/yyyy hh:mm")
                         }
                     </td>
                     <td>
@@ -68,24 +68,10 @@
     {
         <p>No RunBooks to display</p>
     }
-
-    <div class="modal fade" id="outputsModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content" style="width: 500px;">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Outputs</h4>
-                </div>
-                <div class="modal-body">
-                    <textarea readonly id="outputsModalBody" rows="10" style="width: 100%">
-                    </textarea>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    
+    @{
+        Html.RenderPartial("_Modal");
+    }
 </div>
 
 @section scripts
@@ -97,6 +83,7 @@
             (function ($) {
                 $('.show-button').click(function (event) {
                     $('#myModal').modal('show');
+                    $('#myModalLabel').text('Outputs');
                     $('#outputsModalBody').val($.trim(event.target.children[0].innerText));
                 });
             })(window.jQuery);
