--- a/ServiceCatalog/Views/Shared/_Modal.cshtml
+++ b/ServiceCatalog/Views/Shared/_Modal.cshtml
@@ -1,12 +1,12 @@
 ﻿<div class="modal fade" id="outputsModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
-        <div class="modal-content" style="width: 500px;">
+        <div class="modal-content" style="">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Title</h4>
             </div>
             <div class="modal-body">
-                <textarea readonly id="outputsModalBody" rows="10" style="width: 100%">
+                <textarea readonly id="outputsModalBody" rows="10" style="width: 100%; max-width: 100%;">
                     </textarea>
             </div>
             <div class="modal-footer">
