added refresh button to runbooks page

--- a/ServiceCatalog/Views/RunBooks/RunBooksView.cshtml
+++ b/ServiceCatalog/Views/RunBooks/RunBooksView.cshtml
@@ -3,7 +3,10 @@
 }
 
 <div>
-    <h4>RunBooks</h4>
+    <div style="display:  flex; justify-content: space-between;">
+        <h4>RunBooks</h4>
+        <button class="btn btn-primary" style="height: 10%;" onclick="window.location.reload();">Refresh</button>
+    </div>
     <hr />
     @Html.ValidationSummary(true)
 
