--- a/ServiceCatalog/Views/RunBooks/RunBooksView.cshtml
+++ b/ServiceCatalog/Views/RunBooks/RunBooksView.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using GridMvc.Html
+@model IEnumerable<ServiceCatalog.Models.Job>
+
+@{
     ViewBag.Title = "RunBooks";
 }
 
@@ -8,74 +11,30 @@
         <button class="btn btn-primary" style="height: 10%;" onclick="window.location.reload();">Refresh</button>
     </div>
     <hr />
-    @Html.ValidationSummary(true)
+    @Html.Grid(Model).Columns(columns =>
+    {
+        columns.Add(m => m.Properties.RunBook.Name).Titled("RunBook Name").Filterable(true);
+        columns.Add(m => m.Properties.JobId).Titled("JobId").Filterable(true);
+        columns.Add(m => m.Properties.Status).Titled("Status").Filterable(true);
+        columns.Add(m => m.Properties.StartTime).Titled("StartTime").Filterable(true)
+            .RenderValueAs(s => s.Properties.StartTime?.ToString("MM/dd/yyyy hh:mm"));
+        columns.Add(m => m.Properties.EndTime).Titled("EndTime").Filterable(true)
+            .RenderValueAs(s => s.Properties.EndTime?.ToString("MM/dd/yyyy hh:mm"));
+        columns.Add().Encoded(false).Sanitized(false).Titled("Outputs").Filterable(false)
+            .RenderValueAs(col =>
+                @<a class="btn btn-primary show-button" data-toggle="modal" data-target="#outputsModal">
+                    Show Outputs
+                    <p style="display: none;">
+                        @col.Outputs
+                    </p>
+                </a>
+            );
+    }).WithPaging(10).Sortable(true)
+</div>  
 
-    @if (ViewBag.Jobs.Count > 0)
-    {
-        <table class="table table-bordered table-responsive table-hover">
-            <tr>
-                <th>RunBook Name</th>
-                <th>JobId</th>
-                <th>Status</th>
-                <th>StartTime</th>
-                <th>EndTime</th>
-                <th>Outputs</th>
-            </tr>
-            @{ int count = 0; }
-            @foreach (var job in ViewBag.Jobs)
-            {
-                <tr>
-                    <td>@job.Properties.RunBook.Name</td>
-                    <td>@job.Properties.JobId</td>
-                    @{
-                        var state = job.Properties.Status;
-                    }
-                    @if (state == "Completed")
-                    {
-                        <td class="successed-status">@state</td>
-                    }
-                    else if (state == "Failed")
-                    {
-                        <td class="failed-status">@state</td>
-                    }
-                    else
-                    {
-                        <td class="other-status">@state</td>
-                    }
-                    <td>
-                        @if (job.Properties.StartTime != null)
-                        {
-                            @job.Properties.StartTime.ToString("MM/dd/yyyy hh:mm")
-                        }
-                    </td>
-                    <td>
-                        @if (job.Properties.EndTime != null)
-                        {
-                            @job.Properties.EndTime.ToString("MM/dd/yyyy hh:mm")
-                        }
-                    </td>
-                    <td>
-                        <a class="btn btn-primary show-button" data-toggle="modal" data-target="#outputsModal">
-                            Show Outputs
-                            <p id="output-@count" style="display: none;">
-                                @job.Outputs
-                            </p>
-                        </a>
-                    </td>
-                </tr>
-                count++;
-            }
-        </table>
-    }
-    else
-    {
-        <p>No RunBooks to display</p>
-    }
-    
-    @{
-        Html.RenderPartial("_Modal");
-    }
-</div>
+@{
+    Html.RenderPartial("_Modal");
+}
 
 @section scripts
 {
@@ -93,6 +52,14 @@
                     window.location.reload();
                 }, 35000);
                 $.ajaxSetup({ cache: false });
+                $("td:contains('Completed')").each(function () {
+                    var regex = new RegExp('Completed','gi');
+                    $(this).html($(this).text().replace(regex, "<td class='successed-status'>Completed</td>"));
+                });
+                $("td:contains('Failed')").each(function () {
+                    var regex = new RegExp('Failed','gi');
+                    $(this).html($(this).text().replace(regex, "<td class='failed-status'>Failed</td>"));
+                });
             })(window.jQuery);
         }
     </script>
