--- a/ServiceCatalog/Views/Deployment/DeployView.cshtml
+++ b/ServiceCatalog/Views/Deployment/DeployView.cshtml
@@ -58,7 +58,7 @@
                         @if (ViewBag.IsAdmin)
                         {
                             <td>
-                                <div class="btn-group" role="group">
+                                <div class="btn-group" role="group" style="min-width: 120px;">
                                     @Html.ActionLink("Edit", "UpdateTemplateView", "Template",
                                              new { templateId = template.TemplateId },
                                              new { @class = "btn btn-warning" })
