--- a/ServiceCatalog/Views/Deployments/DeploymentsView.cshtml
+++ b/ServiceCatalog/Views/Deployments/DeploymentsView.cshtml
@@ -3,12 +3,12 @@
 @model IEnumerable<ServiceCatalog.Models.DeploymentViewModel>
 
 @{
-    ViewBag.Title = "Deployments";
+    ViewBag.Title = "Deployment Logs";
 }
 
 <div id="deployments">
     <div style="display:  flex; justify-content: space-between;">
-        <h4>Deployments</h4>
+        <h4>Deployment Logs</h4>
         <button class="btn btn-primary" style="height: 10%;" onclick="window.location.reload();">Refresh</button>
     </div>
     <hr />
