--- a/ServiceCatalog/Views/RunBooks/RunBooksView.cshtml
+++ b/ServiceCatalog/Views/RunBooks/RunBooksView.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GridMvc.Html
-@model IEnumerable<ServiceCatalog.Models.Job>
+@model IEnumerable<ServiceCatalog.Models.JobViewModel>
 
 @{
     ViewBag.Title = "Management Logs";
